# FHIRForge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  start_ui.sh
src/api/: main.py  models.py
src/fhir/: generator.py
src/nlp/: extractor.py
src/ui/: __init__.py  streamlit_app.py
tests/: test_api.py  test_extractor.py
